--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
   <title>OSU Dental</title>
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <script src="Scripts/angular.min.js"></script>
-  <script src="Scripts/angular-resource.js"></script>
+  <link rel="stylesheet" href="css/ng-grid.css">
+  <link rel="stylesheet" href="css/ui-lightness/jquery-ui-1.10.2.custom.min.css">
+    <!--[if lt IE 9]>
+        <script src="js/es5-shim.min.js"></script>
+        <script src="js/angular-ui-ieshiv.min.js"></script>
+    <![endif]-->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script src="js/jquery-ui-1.10.2.custom.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.js"></script>
+  <script src="js/angular-ui.min.js"></script>
+  <script src="js/ng-grid-2.0.4.debug.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
  <script src="js/filters.js"></script>
-  <script src="js/services.js"></script>
+  <script src="js/services.js"></script> 
 </head>
 <body>
  
