--- a/tpl/client-detail.html
+++ b/tpl/client-detail.html
@@ -1,18 +1,81 @@
-﻿<div class="form-left-col">
-    <label>Id:</label>
-    <input name="client.Id" type="text" ng-model="client.Id" disabled />
+﻿<form class="container" ng-submit="editing=false">
+    <div class="row">
+        <div class="span2">
+            <label>Id:</label>
+            <input class="input-block-level" name="client.Id" type="text" ng-model="client.Id" disabled />
+        </div>
+        <div class="span2">
+            <label>Is Active:</label>
+            <input class="input-block-level" name="client.IsActive" type="checkbox" ng-model="client.IsActive" />
+        </div>
+        <div class="span8">
+            <label>Practice:</label>
+            <input class="input-block-level" type="text" name="client.Name" ng-model="client.Name" required/>
+        </div>
+    </div>
 
-    <label>Name:</label>
-    <input type="text" name="client.Name" ng-model="client.Name" required/>
+    <div class="row">
+        <div class="span12">
+            <label>Address:</label>
+            <input class="input-block-level" type="text" name="client.Address" ng-model="client.Address" required/>
+            <input class="input-block-level" type="text" name="client.Address2" ng-model="client.Address2" required/>
+        </div>
+    </div>
 
-    <label>Address:</label>
-    <input type="text" name="client.Address" ng-model="client.Address" required/>
+    <div class="row">
+        <div class="span6">
+            <label>City:</label>
+            <input class="input-block-level" type="text" name="client.City" ng-model="client.City" required/>
+        </div>
+        <div class="span3">
+            <label>State:</label>
+            <input class="input-block-level" type="text" name="client.State" ng-model="client.State" required/>
+        </div>
+        <div class="span3">
+            <label>Zip:</label>
+            <input class="input-block-level" type="text" name="client.Zip" ng-model="client.Zip" required/>
+        </div>
+    </div>
 
-    <label>Address2:</label>
-    <input type="text" name="client.Address2" ng-model="client.Address2" required/>
+    <div class="row">
+        <div class="span3">
+            <label>Phone:</label>
+            <input class="input-block-level" type="text" name="client.Phone" ng-model="client.Phone" required/>
+        </div>
+        <div class="span2">
+            <label>Ext:</label>
+            <input class="input-block-level" type="text" name="client.Extension" ng-model="client.Extension" required/>
+        </div>
+        <div class="span3">
+            <label>Fax:</label>
+            <input class="input-block-level" type="text" name="client.Fax" ng-model="client.Fax" required/>
+        </div>
+        <div class="span4">
+            <label>Client Type:</label>
+            <select class="input-block-level" type="text" name="client.TypeId" ng-model="client.TypeId" required ng-options="value.label for value in clienttypes"/>
+        </div>
+    </div>
 
-    <label>City:</label>
-    <input type="text" name="client.City" ng-model="client.City" required/>
+    <div class="row">
+        <div class="span3">
+            <label>DDS First Name:</label>
+            <input class="input-block-level" type="text" name="client.DDSFirstName" ng-model="client.DDSFirstName" required/>
+        </div>
+        <div class="span3">
+            <label>DDS Last Name:</label>
+            <input class="input-block-level" type="text" name="client.DDSLastName" ng-model="client.DDSLastName" required/>
+        </div>
+        <div class="span3">
+            <label>Life Member: <input type="checkbox" name="client.LifeMember" ng-model="client.LifeMember" disabled/></label>
+            <label>Graduate: <input type="checkbox" name="client.Graduate" ng-model="client.Graduate"/></label>
+        </div>
+    </div>
+    <div class="row">
+        <div class="span12">
+            <label>Email:</label>
+            <input class="input-block-level" type="text" name="client.Email" ng-model="client.Email" required/>
+        </div>
+    </div>
 
     {{client.DateAdded | date}}<br />
     {{client.DateDropped | date}}<br />
@@ -20,9 +83,5 @@
 
     <button class="save" ng-click="save()">Save</button>
     <button class="delete" ng-click="delete()">Delete</button>
-</div>
+</form>
 
-<div class="form-right-col">
-    <label>State:</label>
-    <textarea name="client.State" ng-model="client.State"></textarea>
-</div>
