--- a/tpl/client-equipment-list.html
+++ b/tpl/client-equipment-list.html
@@ -1,4 +1,4 @@
-﻿<div class="container" ng-controller="ClientListCtrl">
+﻿<div class="container" ng-controller="ClientEquipListCtrl">
   <div class="row">
     <div class="span12">
       <!--Body content-->
