--- a/tpl/result-detail.html
+++ b/tpl/result-detail.html
@@ -3,19 +3,19 @@
     <input name="result.Id" type="text" ng-model="result.Id" disabled />
 
     <label>Test Date:</label>
-    <input type="text" name="result.TestDate" ng-model="result.TestDate" required/>
+    <input type="text" name="result.TestDate" ng-model="result.TestDate" ui-date ui-date-format ng-required/>
 
     <label>Enter Date:</label>
-    <input type="text" name="result.EnterDate" ng-model="result.EnterDate" required/>
+    <input type="text" name="result.EnterDate" ng-model="result.EnterDate" ui-date ui-date-format ng-required/>
 
-    <label>Test Result:</label>
-    <input type="text" name="result.TestResult" ng-model="result.TestResult" required/>
+    <label>Test Successful: <input type="checkbox" name="result.TestResult" ng-model="result.TestResult" /></label>
 
     <label>Equip ID:</label>
     <input type="text" name="result.EquipId" ng-model="result.EquipId" required/>
 
-    <button class="save" ng-click="save()">Save</button>
-    <button class="delete" ng-click="delete()">Delete</button>
+    <button class="save primary" ng-click="save()">Save</button>
+    <button class="cancel" ng-click="cancel()">Cancel</button>
+    <button class="delete danger" ng-click="delete()">Delete</button>
 </div>
 
 <div class="form-right-col">
