--- a/tpl/order-list.html
+++ b/tpl/order-list.html
@@ -1,5 +1,6 @@
 ﻿<div class="container-fluid" ng-controller="OrderListCtrl">
-    <div class="navbar">
+    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
+<!--    <div class="navbar">
         <div class="navbar-inner">
             <a href="SMS" class="brand">SMS</a>
             <div class="nav pull-right">
@@ -12,7 +13,7 @@
                 <li class="active"><a href="#/orders">Order History</a></li>
             </ul>
         </div>
-    </div>
+    </div>-->
   <div class="row-fluid">
     <div class="span12">
       <!--Body content-->
