--- a/tpl/client-detail.html
+++ b/tpl/client-detail.html
@@ -1,5 +1,7 @@
-﻿<form class="container" ng-submit="editing=false">
-    <div class="row">
+﻿<form class="container-fluid" ng-submit="editing=false">
+    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
+    <div ng-include src="'tpl/client-navbar.html'" ng-controller="ClientNavBarCtrl"></div>
+    <div class="row-fluid">
         <div class="span2">
             <label>Id:</label>
             <input class="input-block-level" name="client.Id" type="text" ng-model="client.Id" disabled />
@@ -14,7 +16,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row-fluid">
         <div class="span12">
             <label>Address:</label>
             <input class="input-block-level" type="text" name="client.Address" ng-model="client.Address" required/>
@@ -22,7 +24,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row-fluid">
         <div class="span6">
             <label>City:</label>
             <input class="input-block-level" type="text" name="client.City" ng-model="client.City" required/>
@@ -37,7 +39,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row-fluid">
         <div class="span3">
             <label>Phone:</label>
             <input class="input-block-level" type="text" name="client.Phone" ng-model="client.Phone" required/>
@@ -56,7 +58,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row-fluid">
         <div class="span3">
             <label>DDS First Name:</label>
             <input class="input-block-level" type="text" name="client.DDSFirstName" ng-model="client.DDSFirstName" required/>
@@ -70,7 +72,7 @@
             <label>Graduate: <input type="checkbox" name="client.Graduate" ng-model="client.Graduate"/></label>
         </div>
     </div>
-    <div class="row">
+    <div class="row-fluid">
         <div class="span12">
             <label>Email:</label>
             <input class="input-block-level" type="text" name="client.Email" ng-model="client.Email" required/>
