--- a/tpl/client-list.html
+++ b/tpl/client-list.html
@@ -1,5 +1,6 @@
-﻿<div class="container" ng-controller="ClientListCtrl">
-  <div class="row">
+﻿<div class="container-fluid" ng-controller="ClientListCtrl">
+    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
+  <div class="row-fluid">
     <div class="span12">
       <!--Body content-->
          <div class="gridStyle" ng-grid="PagingGrid.gridOptions"></div> 
