--- a/tpl/client-order-list.html
+++ b/tpl/client-order-list.html
@@ -1,5 +1,7 @@
-﻿<div class="container" ng-controller="ClientOrderListCtrl">
-  <div class="row">
+﻿<div class="container-fluid" ng-controller="ClientOrderListCtrl">
+    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
+    <div ng-include src="'tpl/client-navbar.html'" ng-controller="ClientNavBarCtrl"></div>
+  <div class="row-fluid">
     <div class="span12">
       <!--Body content-->
          <div class="gridStyle" ng-grid="PagingGrid.gridOptions"></div> 
