--- a/tpl/client-result-list.html
+++ b/tpl/client-result-list.html
@@ -1,5 +1,7 @@
-﻿<div class="container" ng-controller="ClientResultListCtrl">
-  <div class="row">
+﻿<div class="container-fluid" ng-controller="ClientResultListCtrl">
+    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
+    <div ng-include src="'tpl/client-navbar.html'" ng-controller="ClientNavBarCtrl"></div>
+  <div class="row-fluid">
     <div class="span12">
       <!--Body content-->
         <div class="filters">
