--- a/tpl/client-view.html
+++ b/tpl/client-view.html
@@ -1,5 +1,5 @@
 ﻿<form class="container-fluid" ng-submit="isEditMode=false">
-    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
+    <div ng-include src="'tpl/navbar.html'" data-show-edit-mode="true" ng-controller="NavBarCtrl"></div>
     <div class="row-fluid">
         <div class="span2">
             <label>SMS Number:</label>
