--- a/tpl/equipment-list.html
+++ b/tpl/equipment-list.html
@@ -1,17 +1,5 @@
 ﻿<form class="container-fluid" ng-controller="EquipListCtrl">
-    <div class="navbar">
-        <div class="navbar-inner">
-            <a href="SMS" class="brand">SMS</a>
-            <div class="nav pull-right">
-                <span><a href="Logout.aspx" class="btn btn-warning">Log out</a></span>
-            </div>
-            <ul class="nav">
-                <li><a href="#/">Dashboard</a></li>
-                <li><a href="#/results">Results</a></li>
-                <li><a href="#/orders">Order History</a></li>
-            </ul>
-        </div>
-    </div>
+    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
   <div class="row-fluid">
     <div class="span12">
       <!--Body content-->
