states with nested views

--- a/tpl/client-result-list.html
+++ b/tpl/client-result-list.html
@@ -1,7 +1,4 @@
-﻿<div class="container-fluid" ng-controller="ClientResultListCtrl">
-    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
-    <div ng-include src="'tpl/client-navbar.html'" ng-controller="ClientNavBarCtrl"></div>
-  <div class="row-fluid">
+﻿  <div class="row-fluid" ng-controller="ClientResultListCtrl">
     <div class="span12">
       <!--Body content-->
         <div class="filters">
@@ -31,4 +28,3 @@
  
     </div>
   </div>
-</div>
