--- a/tpl/equipment-list.html
+++ b/tpl/equipment-list.html
@@ -1,9 +1,6 @@
-﻿<form class="container-fluid" ng-controller="EquipListCtrl">
-    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
-  <div class="row-fluid">
+﻿  <div class="row-fluid" ng-controller="EquipListCtrl">
     <div class="span12">
       <!--Body content-->
          <div class="gridStyle" ng-grid="PagingGrid.gridOptions"></div> 
     </div>
   </div>
-</form>
