--- a/tpl/result-list.html
+++ b/tpl/result-list.html
@@ -1,5 +1,4 @@
-﻿<div class="container-fluid" ng-controller="ResultListCtrl">
-    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
+﻿<div ng-controller="ResultListCtrl">
     <div class="filters row-fluid">
         <div class="span12">
             <label for="startDate">Start Date: <input id="startDate" name="startDate" ng-model="PagingGrid.filterOptions.startDate" ui-date ui-date-format /></label>
