--- a/tpl/client-detail.html
+++ b/tpl/client-detail.html
@@ -1,7 +1,4 @@
-﻿<form class="container-fluid" ng-submit="editing=false">
-    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
-    <div ng-include src="'tpl/client-navbar.html'" ng-controller="ClientNavBarCtrl"></div>
-    <div class="row-fluid">
+﻿    <div class="row-fluid">
         <div class="span2">
             <label>Id:</label>
             <input class="input-block-level" name="client.Id" type="text" ng-model="client.Id" disabled />
@@ -54,7 +51,7 @@
         </div>
         <div class="span4">
             <label>Client Type:</label>
-            <select class="input-block-level" type="text" name="client.TypeId" ng-model="client.TypeId" required ng-options="value.label for value in clienttypes"/>
+            <select class="input-block-level" type="text" name="client.TypeId" ng-model="client.TypeId" required ng-options="obj.value as obj.label for obj in clienttypes"/>
         </div>
     </div>
 
@@ -78,12 +75,5 @@
             <input class="input-block-level" type="text" name="client.Email" ng-model="client.Email" required/>
         </div>
     </div>
-
-    {{client.DateAdded | date}}<br />
-    {{client.DateDropped | date}}<br />
-
-
-    <button class="save" ng-click="save()">Save</button>
-    <button class="delete" ng-click="delete()">Delete</button>
-</form>
+<div ng-include src="'tpl/actions-edit-delete.html'"></div>
 
