--- a/tpl/client-navbar.html
+++ b/tpl/client-navbar.html
@@ -1,3 +1,5 @@
-﻿<ul class="nav nav-pills">
-    <li ng-repeat="link in clientlinks" ng-class="{active: link.uri.substring(1)==path || $route.current.activeNav == link.type}"><a href="{{link.uri}}">{{link.name}}</a></li>
+﻿<h2>Client: {{clientData.Name}}</h2>
+<ul class="nav nav-pills">
+    <li ng-repeat="link in clientlinks" ng-class="{active: link.uri.substring(1)==path || $state.current.data.activeClientNav == link.type}"><a href="{{link.uri}}">{{link.name}}</a></li>
 </ul>
+<div id="clientdetail" ui-view="clientdetail"></div>
