--- a/tpl/client-order-list.html
+++ b/tpl/client-order-list.html
@@ -1,10 +1,6 @@
-﻿<div class="container-fluid" ng-controller="ClientOrderListCtrl">
-    <div ng-include src="'tpl/navbar.html'" ng-controller="NavBarCtrl"></div>
-    <div ng-include src="'tpl/client-navbar.html'" ng-controller="ClientNavBarCtrl"></div>
-  <div class="row-fluid">
+﻿  <div class="row-fluid" ng-controller="ClientOrderListCtrl">
     <div class="span12">
       <!--Body content-->
          <div class="gridStyle" ng-grid="PagingGrid.gridOptions"></div> 
     </div>
   </div>
-</div>
