--- a/tpl/client-view.html
+++ b/tpl/client-view.html
@@ -1,5 +1,5 @@
-﻿<form class="container-fluid" ng-submit="isEditMode=false">
-    <div ng-include src="'tpl/navbar.html'" data-show-edit-mode="true" ng-controller="NavBarCtrl"></div>
+﻿<!--<form class="container-fluid" ng-submit="isEditMode=false">
+    <div ng-include src="'tpl/navbar.html'" data-show-edit-mode="true" ng-controller="NavBarCtrl"></div>-->
     <div class="row-fluid">
         <div class="span2">
             <label>SMS Number:</label>
@@ -9,9 +9,12 @@
             <label>Is Active:</label>
             <nuwu-editable ng-model="client.IsActive" type="checkbox"></nuwu-editable>
         </div>-->
-        <div class="span10">
+        <div class="span6">
             <label>Practice:</label>
             <nuwu-editable ng-model="client.Name" type="text" required></nuwu-editable>
+        </div>
+        <div class="span4">
+            <div class="pull-right" ng-include src="'tpl/actions-toggle-edit.html'"></div>
         </div>
     </div>
 
@@ -53,7 +56,7 @@
         </div>
         <div class="span4">
             <label>Client Type:</label>
-            <nuwu-editable ng-model="client.TypeId" type="select" select-values="clienttypes" select-labels="clienttypelabels" disabled></nuwu-editable>
+            <nuwu-editable ng-model="client.TypeId" type="select" select-options="clienttypes" disabled></nuwu-editable>
         </div>
     </div>
 
@@ -94,8 +97,6 @@
         </div>
     </div>
 
-    <a href="" ng-click="isEditMode=!isEditMode" class="btn" ng-hide="isEditMode">Edit</a>
-    <button class="save btn" ng-show="isEditMode" ng-click="isEditMode=false">Cancel</button>
-    <button class="save btn btn-primary" ng-show="isEditMode" ng-click="save()">Save</button>
-</form>
+<div ng-include src="'tpl/actions-toggle-edit.html'"></div>
+<!--</form>-->
 
