--- a/tpl/equipment-detail.html
+++ b/tpl/equipment-detail.html
@@ -1,24 +1,18 @@
-﻿<div class="form-left-col">
-    <label>Id:</label>
-    <input name="result.Id" type="text" ng-model="result.Id" disabled />
-
-    <label>Test Date:</label>
-    <input type="text" name="result.TestDate" ng-model="result.TestDate" required/>
-
-    <label>Enter Date:</label>
-    <input type="text" name="result.EnterDate" ng-model="result.EnterDate" required/>
-
-    <label>Test Result:</label>
-    <input type="text" name="result.TestResult" ng-model="result.TestResult" required/>
-
-    <label>Equip ID:</label>
-    <input type="text" name="result.EquipId" ng-model="result.EquipId" required/>
-
-    <button class="save" ng-click="save()">Save</button>
-    <button class="delete" ng-click="delete()">Delete</button>
+﻿<div class="row-fluid">
+    <div class="span3">
+        <label>Id:</label>
+        <input name="equipment.Id" class="input-block-level" type="text" ng-model="equipment.Id" disabled />
+    </div>
+    <div class="span3">
+        <label>Client Id:</label>
+        <input class="input-block-level" type="text" name="equipment.ClientId" ng-model="equipment.ClientId" required/>
+    </div>
+    <div class="span3">
+        <label>Is Active: <br /><input type="checkbox" name="equipment.IsActive" ng-model="equipment.IsActive" /></label>
+    </div>
+    <div class="span3">
+        <label>Type:</label>
+        <select class="input-block-level" type="text" name="equipment.Type" ng-model="equipment.Type" required ng-options="obj.value as obj.label for obj in equipmenttypes"/>
+    </div>
 </div>
-
-<div class="form-right-col">
-    <label>Reference:</label>
-    <textarea name="result.Reference" ng-model="result.Reference"></textarea>
-</div>
+<div ng-include src="'tpl/actions-edit-delete.html'"></div>
