--- a/tpl/result-detail.html
+++ b/tpl/result-detail.html
@@ -1,24 +1,31 @@
-﻿<div class="form-left-col">
-    <label>Id:</label>
-    <input name="result.Id" type="text" ng-model="result.Id" disabled />
-
-    <label>Test Date:</label>
-    <input type="text" name="result.TestDate" ng-model="result.TestDate" ui-date ui-date-format ng-required/>
-
-    <label>Enter Date:</label>
-    <input type="text" name="result.EnterDate" ng-model="result.EnterDate" ui-date ui-date-format ng-required/>
-
-    <label>Test Successful: <input type="checkbox" name="result.TestResult" ng-model="result.TestResult" /></label>
-
-    <label>Equip ID:</label>
-    <input type="text" name="result.EquipId" ng-model="result.EquipId" required/>
-
-    <button class="save primary" ng-click="save()">Save</button>
-    <button class="cancel" ng-click="cancel()">Cancel</button>
-    <button class="delete danger" ng-click="delete()">Delete</button>
+﻿<div ng-include src="'tpl/actions-edit-delete.html'"></div>
+<div class="row-fluid">
+    <div class="span3">
+        <label>Id:</label>
+        <input class="input-block-level" name="result.Id" type="text" ng-model="result.Id" disabled />
+    </div>
+    <div class="span3">
+        <label>Test Successful: <br /><input type="checkbox" name="result.TestResult" ng-model="result.TestResult" /></label>
+    </div>
+    <div class="span6">
+        <label>Equip ID:</label>
+        <input class="input-block-level" type="text" name="result.EquipId" ng-model="result.EquipId" required/>
+    </div>
 </div>
-
-<div class="form-right-col">
-    <label>Reference:</label>
-    <textarea name="result.Reference" ng-model="result.Reference"></textarea>
+<div class="row-fluid">
+    <div class="span6">
+        <label>Test Date:</label>
+        <input class="input-block-level" type="text" name="result.TestDate" ng-model="result.TestDate" ui-date ui-date-format ng-required/>
+    </div>
+    <div class="span6">
+        <label>Enter Date:</label>
+        <input class="input-block-level" type="text" name="result.EnterDate" ng-model="result.EnterDate" ui-date ui-date-format ng-required/>
+    </div>
 </div>
+<div class="row-fluid">
+    <div class="span12">
+        <label>Reference:</label>
+        <textarea class="input-block-level" name="result.Reference" ng-model="result.Reference"></textarea>
+    </div>
+</div>
+<div ng-include src="'tpl/actions-edit-delete.html'"></div>
