--- a/tpl/client-list.html
+++ b/tpl/client-list.html
@@ -1,6 +1,13 @@
-﻿  <div class="row-fluid" ng-controller="ClientListCtrl">
-    <div class="span12">
-      <!--Body content-->
-         <div class="gridStyle" ng-grid="PagingGrid.gridOptions"></div> 
+﻿<div ng-controller="ClientListCtrl">
+    <div class="filters row-fluid">
+        <div class="span12">
+            <label for="search">Search: <input id="search" name="search" ng-model="PagingGrid.filterOptions.search" /></label>
+        </div>
     </div>
-  </div>
+    <div class="row-fluid">
+        <div class="span12">
+            <!--Body content-->
+            <div class="gridStyle" ng-grid="PagingGrid.gridOptions"></div> 
+        </div>
+    </div>
+</div>
