--- a/tpl/order-detail.html
+++ b/tpl/order-detail.html
@@ -7,7 +7,7 @@
     </div>
     <div class="span6">
         <label>Client ID:</label>
-        <input class="input-block-level" type="text" name="order.ClientId" ng-model="order.ClientId" required/>
+        <input class="input-block-level" type="text" name="order.ClientId" ng-model="order.ClientId" ng-disabled='!isNewMode' required/>
     </div>
 </div>
 <div class="row-fluid">
