--- a/tpl/order-list.html
+++ b/tpl/order-list.html
@@ -1,6 +1,13 @@
-﻿  <div class="row-fluid" ng-controller="OrderListCtrl">
+﻿<div ng-controller="OrderListCtrl">
+    <div class="filters row-fluid">
+        <div class="span12">
+            <label for="search">Search: <input id="search" name="search" ng-model="PagingGrid.filterOptions.search" /></label>
+        </div>
+    </div>
+  <div class="row-fluid">
     <div class="span12">
       <!--Body content-->
          <div class="gridStyle" ng-grid="PagingGrid.gridOptions"></div> 
     </div>
   </div>
+</div>
