--- a/tpl/result-list.html
+++ b/tpl/result-list.html
@@ -1,8 +1,11 @@
 ﻿<div ng-controller="ResultListCtrl">
     <div class="filters row-fluid">
-        <div class="span12">
+        <div class="span6">
             <label for="startDate">Start Date: <input id="startDate" name="startDate" ng-model="PagingGrid.filterOptions.startDate" ui-date ui-date-format /></label>
             <label for="endDate">End Date: <input id="endDate" name="endDate" ng-model="PagingGrid.filterOptions.endDate" ui-date ui-date-format /></label>
+        </div>
+        <div class="span6">
+            <label for="search">Search: <input id="search" name="search" ng-model="PagingGrid.filterOptions.search" /></label>
         </div>
     </div>
   <div class="row-fluid">
